--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,9 @@ github:
 
 # This is the list of pages to include in the header of the website.
 pages_list:       
-  About: '/about/'
+  Me: '/about/'
   Archive: '/archive/'
-  Feed: '/atom.xml'
+#  Feed: '/atom.xml'
 
 # Allow URL Redirects: 
 #  * https://help.github.com/articles/redirects-on-github-pages
